# cmake-win-store-app

./: App.cpp  App.h  CMakeLists.txt  LICENSE  README.md  Sample3DSceneRenderer.cpp  Sample3DSceneRenderer.h  SampleFpsTextRenderer.cpp  SampleFpsTextRenderer.h  ShaderStructures.h  win-appMain.cpp  win-appMain.h
